# KCK-AirControl

./: README.md  app.py  camera_handler.py  cube_app.py  gui_app.py  hand_tracking.py  main.py  pyproject.toml  requirements.txt  test_hand_tracking.py
app/: config.py  gesture_recognizer.py  main_window.py  state.py  view_3d.py  widgets.py
templates/: index.html
tests/: test_state.py
